# cmake-playground

./: README.md
cpack/: CMakeLists.txt
ctest/: CMakeLists.txt  test_math.cpp
installing/: CMakeLists.txt
shared_library/: CMakeLists.txt
shared_library/math/: CMakeLists.txt  math_functions.h
simple_executable/: CMakeLists.txt
static_library/: CMakeLists.txt  main.cpp
static_library/math/: CMakeLists.txt
versioning/: CMakeLists.txt  main.cpp  version.h.in
